--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,10 @@ test:
 #
 production:
   <<: *default
-  database: fuku_production
-  username: fuku
-  password: <%= ENV['FUKU_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  username: <%= ENV['DATABASE_USERNAAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  master_key: <%= ENV['RAILS_MASTER_KEY'] %>
+  # database: fuku_production
+  # username: fuku
+  # password: <%= ENV['FUKU_DATABASE_PASSWORD'] %>
